--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                     <h2>Recently played</h2>
                     
-                    <div class="container-cards flex">
+                    <div class="container-cards flex wrap">
 
                         <div class="card">
 
