--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 </div>
             </div>
 
-            <div class="categories flex jc-center">
+            <div class="categories">
 
-                <ul class="flex">
+                <ul class="flex jc-center wrap">
                     <li><a href="#">IN EVIDENZA <hr></a></li>
                     <li><a href="#">PODCAST <hr></a></li>
                     <li><a href="#">CLASSIFICHE <hr></a></li>
