terminato hover + media query

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/hover-media.css" />
     <title>spotifyweb</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
                 <img class="img-logo logo-small" src="img/logo-small.svg" alt="logo">
 
                 <ul>
-                    <li><a class="flex ai-center select-home font-w" href="#"><img src="img/home.svg" alt="home"><span>Home</span></a></li>
+                    <li><a class="flex ai-center select-home font-grey" href="#"><img src="img/home.svg" alt="home"><span>Home</span></a></li>
                     <li><a class="flex ai-center select-home font-grey" href="#"><img src="img/search.svg" alt="search"><span>Cerca</span></a></li>
                     <li><a class="flex ai-center select-home font-grey" href="#"><img src="img/libreria.svg" alt="home"><span>La tua libreria</span></a></li>
                 </ul>
